<resources>
    <string name="app_name">AviaSales</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="registrationEnterName">Enter your name</string>
    <string name="registrationEnterEmail">Enter your email</string>
    <string name="registrationEnterPassword">Enter your password</string>
    <string name="registration">Registration</string>
    <string name="errorEmptyName">Please enter your name</string>
    <string name="errorEmptyEmail">Please enter your email</string>
    <string name="errorEmptyPassword">Please enter your password</string>
    <string name="errorCanNotRegister">Can not register</string>
    <string name="errorNoConnection">No Internet connection</string>
    <string name="authorisation">Authorization</string>
    <string name="errorCanNotLogin">Can not login</string>
    <string name="returnFlight">Flight back</string>
    <string name="city_from">City From</string>
    <string name="city_to">City To</string>
    <string name="trip_without_transpher">Trips without transphers</string>
    <string name="trip_with_transpher">Trips with transphers</string>
    <string name="ticket_number">Ticket №</string>
    <string name="trips_back">Trips back</string>
    <string name="clear">Clear</string>
    <string name="booking_number">Booking №</string>
    <string name="choose_place_count">Please choose place count</string>
    <string name="book_shure">Are you shure you want book this tickets?</string>
    <string name="search_tickets">Search Tickets</string>
    <string name="booking_history">Booking History</string>
    <string name="buy">Book</string>
    <string name="book_shure_undo">Are you shure you want to undo this book?</string>
    <string name="dateDepart">Date</string>
    <string name="dateDepartBack">Data(back)</string>

    <string name="choose_date">Choose date</string>
    <string name="ready">Ready</string>
    <string name="empty_result">Empty result</string>

</resources>
