<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/registrationLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/registrationEditName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditTextStyle"
        android:hint="@string/registrationEnterName"
        />

    <EditText
        android:id="@+id/registrationEditEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditTextStyle"
        android:inputType="textEmailAddress"
        android:hint="@string/registrationEnterEmail"
        />

    <EditText
        android:id="@+id/registrationEditPasswoed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditTextStyle"
        android:inputType="textPassword"
        android:hint="@string/registrationEnterPassword"
        />

        <TextView
            android:id="@+id/registrationTvError"
            android:textColor="@android:color/holo_red_dark"
            android:text="Error"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"/>


        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/registrationButtonOk"
            android:text="@android:string/ok"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/registrationButtonCancel"
            android:text="@android:string/cancel"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registrationProgressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>


    </RelativeLayout>


</LinearLayout>